<resources>
    <string name="app_name">ExploreX Admin</string>
    <string name="username">Username</string>
    <string name="delete">Delete</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u><b><i>Forgot Password</i></b></u></string>
    <string name="login_btn">Login</string>
    <string name="signup_btn">Create New Account</string>
    <string name="empty_username">User name cannot be empty.</string>
    <string name="empty_password">Password cannot be empty.</string>
    <string name="network_error">Network error : Please make sure you have Internet connectivity.</string>
    <string name="unable_to_get_location_list">Unable to get the list of points of interest.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="poi">Point of Interest</string>
    <string name="delete_event">Delete Event</string>
    <string name="delete_event_confirmation">Are you sure you want to delete the event</string>
    <string name="event_deleted">Event deleted.</string>
    <string name="event_delete_failed">Network error: Unable to delete event.</string>
    <string name="delete_location">Delete Location</string>
    <string name="delete_location_confirmation">Are you sure you want to delete the location</string>
    <string name="location_deleted">Location deleted.</string>
    <string name="location_delete_failed">Network error: Unable to delete location.</string>
    <string name="event_name">Event Name</string>
    <string name="event_location">Event Location</string>
    <string name="event_description">Event description</string>
    <string name="event_tag_description">Search tags for this event...</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="from">From</string>
    <string name="To">To</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="timePickerTitle">Select Time</string>
    <string name="modify_event">Modify Event</string>
    <string name="new_event">New Event</string>
    <string name="event_name_missing">Event name must be specified.</string>
    <string name="event_date_missing">Event date must be specified.</string>
    <string name="event_start_time_missing">Event start time must be specified.</string>
    <string name="event_end_time_missing">Event end time must be specified.</string>
    <string name="unable_to_save_event_info">Failed to save event information.</string>
    <string name="event_info_saved">Event information saved.</string>
    <string name="location_name">Location Name</string>
    <string name="location_description">Location Description</string>
    <string name="location_tags">Search tags for this location</string>
    <string name="modify_location">Modify Location</string>
    <string name="new_location">New Location</string>
    <string name="location_name_missing">Location name must be specified.</string>
    <string name="location_description_missing">Location description must be specified.</string>
    <string name="location_info_saved">Location information saved.</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="address">Address</string>
    <string name="website">Website</string>
    <string name="latitude_missing">Must specify latitude.</string>
    <string name="longitude_missing">Must specify longitude.</string>
</resources>
