<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/windowBackground"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:gravity="right"
        android:textSize="16dp"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:background="@drawable/rounded_edittext"
        android:id="@+id/username"
        android:hint="@string/username"
        android:textColor="@color/colorPrimaryText"
        android:singleLine="true" />

    <EditText
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textSize="16dp"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:background="@drawable/rounded_edittext"
        android:id="@+id/password"
        android:hint="@string/password"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryText"
        android:ellipsize="start"/>

    <TextView
        android:text="@string/forgot_password"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:gravity="right"
        android:textSize="16dp"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_password"
        android:clickable="true"
        android:textColor="@color/colorPrimary"
        android:textStyle="italic"
        android:autoLink="web"
        android:layout_alignParentRight="true"
        />

    <Button
        android:id="@+id/login_btn"
        android:text="@string/login_btn"
        android:textColor="@color/colorSecondaryText"
        android:textSize="18dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/button_border_grey"
        android:shadowColor="#FFBC36"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="16dp"
        />

    <Button
        android:id="@+id/signup_btn"
        android:text="@string/signup_btn"
        android:textColor="@color/colorSecondaryText"
        android:background="@android:color/transparent"
        android:textSize="16dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_alignParentBottom="true"
        android:layout_weight="0"
        />

</LinearLayout>
