<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/windowBackground"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/location_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="4dp"
            android:gravity="left"
            android:textSize="12dp"
            android:textColor="@color/colorPrimaryText"
            android:singleLine="true"
            />

        <TextView
            android:id="@+id/name_tv2"
            android:text="@string/location_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textColor="@color/colorSecondaryText"
            android:textSize="12dp"
            />

        <EditText
            android:id="@+id/description_et"
            android:inputType="textMultiLine"
            android:lines="8"
            android:textSize="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorDivider"
            android:hint="@string/location_description"
            android:gravity="top|left"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/event_edittext_style"
            android:scrollbars="vertical"
            />

        <TextView
            android:id="@+id/description_tv2"
            android:text="@string/location_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textColor="@color/colorSecondaryText"
            android:textSize="12dp"
            />

        <EditText
            android:id="@+id/tags_et"
            android:inputType="textMultiLine"
            android:lines="8"
            android:textSize="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorDivider"
            android:hint="@string/location_tags"
            android:gravity="top|left"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/event_edittext_style"
            android:scrollbars="vertical"
            />

        <TextView
            android:id="@+id/tags_tv2"
            android:text="@string/location_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textColor="@color/colorSecondaryText"
            android:textSize="12dp"
            />

        <TextView
            android:id="@+id/feedback_filler"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


        <ImageButton
            android:id="@+id/save_btn"
            android:layout_gravity="right"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/done_green_36dp" />

    </LinearLayout>


</ScrollView>
